<?xml version="1.0"?>
<package format="3">
  <name>imu</name>
  <version>0.0.0</version>
  <description>The imu package</description>

  <maintainer email="book@todo.todo">book</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
